// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderPromotionItem /> Renders OrderPromotionItem as expected 1`] = `
<div
  className="item-list"
>
  <div>
    <button
      className="red"
      onClick={[Function]}
    >
      Delete
    </button>
  </div>
  <hr
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
        "height": 3,
      }
    }
  />
</div>
`;

exports[`<OrderPromotionItem /> With Context 1`] = `
<div
  className="item-list"
>
  <div>
    <button
      className="red"
      onClick={[Function]}
    >
      Delete
    </button>
  </div>
  <ColoredLine
    color="gray"
  />
</div>
`;
